Atualização do gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#Acesso ao banco de dados
+src/main/webapp/META-INF/context.xml
+
 #JAVA
 *.class
 
@@ -65,3 +68,4 @@ local.properties
 
 MANIFEST.MF
 target/
+
